# AI-Research-Analyst-Agent

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  package-lock.json  package.json
apps/api/: alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260612_0001_create_core_tables.py
apps/api/app/: main.py
apps/api/app/agents/: __init__.py  graph.py  nodes.py  providers.py  source_validation.py  state.py  step_recorder.py
apps/api/app/auth/: dependencies.py  router.py
apps/api/app/core/: config.py  database.py  security.py
apps/api/app/models/: __init__.py  admin.py  common.py  prompt.py  research.py  user.py
apps/api/app/repositories/: users.py
apps/api/app/schemas/: auth.py
apps/api/app/services/: __init__.py  approvals.py  auth.py
apps/api/app/vectorstore/: __init__.py  chroma.py  embeddings.py  factory.py  fusion.py  hybrid.py  lexical.py  types.py
apps/api/tests/: conftest.py  test_auth.py  test_hybrid_retrieval.py  test_models.py  test_research_workflow.py  test_source_validation.py  test_vectorstore.py
apps/web/: components.json  package.json  tailwind.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/(auth)/: layout.tsx
apps/web/app/dashboard/: layout.tsx  page.tsx
apps/web/components/ui/: button.tsx  input.tsx  label.tsx
apps/web/features/auth/: auth-api.ts  auth-form.tsx  auth-schemas.ts
apps/web/features/dashboard/: active-workflow.tsx  dashboard-metric-card.tsx  dashboard-section-header.tsx  (+7 more)
docs/: CODING_STANDARDS.md
(+5 files in other folders)
