[project]
name = "research-agent-os-api"
version = "0.1.0"
description = "FastAPI backend for the Research Agent OS platform."
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.14.0",
  "chromadb>=0.5.23",
  "email-validator>=2.2.0",
  "fastapi[standard]>=0.115.6",
  "langgraph>=0.2.60",
  "psycopg[binary]>=3.2.3",
  "pydantic-settings>=2.7.1",
  "pwdlib[argon2]>=0.2.1",
  "pyjwt>=2.10.1",
  "sqlalchemy>=2.0.36"
]

[project.optional-dependencies]
test = [
  "pytest>=8.3.4"
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["alembic*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
